src/objects/TR1__ATS_Configuration_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>TR1__ATS_Submittal_Default_Email_Template__c</fullName>
        <label>ATS Submittal Default Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__List_view_records_size__c</fullName>
        <label>List view records size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Name_Space_Prefix__c</fullName>
        <description>This is used for maintain the package namespace at org level.</description>
        <label>Name Space Prefix</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Submit_With_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for choosing Submit with Email as default option for submittal entry page.</description>
        <label>Submit With Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Submit_without_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for choosing submit without email as the default option for submittal entry page.</description>
        <label>Submit without Email</label>
        <type>Checkbox</type>
    </fields>
    <label>ATS Configuration Settings</label>
</CustomObject>